# YOUTUBEAPI

./: .flaskenv  itdevro_test.json  pyproject.toml  requirements.txt  run.py  sample_data_channel_details.json  sample_data_channel_playlists.json  sample_data_comments_thread.json  sample_data_comments_thread_2.json  sample_data_playlist_items.json  sample_data_search_channel.json  sample_data_video_details.json  sample_data_video_details_2.json  sample_data_video_details_full.json  sample_data_video_list_for_channel_50_results.json
app/: __init__.py  dirty_secrets.py  models.py  routes.py
app/static/css/: offcanvas.css
app/templates/: about.html  analyze_channel.html  base.html  channel.html  channels.html  index.html  old_base.html  old_index.html  search.html  videos.html
app/templates/includes/: navbar.html
app/yt_stats/: __init__.py
conf/: dev.py
