[tool.poetry]
name = "youtubeapi"
version = "0.1.0"
description = ""
authors = ["Tiberiu Dascal <tiberiu.dascal@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cachetools = "4.2.4"
certifi = "2021.10.8"
charset-normalizer = "2.0.7"
click = "8.0.3"
Flask = "2.0.2"
Flask-SQLAlchemy = "2.5.1"
google-api-core = "2.2.0"
google-api-python-client = "2.28.0"
google-auth = "2.3.2"
google-auth-httplib2 = "0.1.0"
googleapis-common-protos = "1.53.0"
greenlet = "1.1.2"
httplib2 = "0.20.1"
idna = "3.3"
itsdangerous = "2.0.1"
Jinja2 = "3.0.2"
MarkupSafe = "2.0.1"
protobuf = "3.19.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
PyMySQL = "1.0.2"
pyparsing = "2.4.7"
python-dotenv = "0.19.1"
requests = "2.26.0"
rsa = "4.7.2"
six = "1.16.0"
SQLAlchemy = "1.4.26"
tqdm = "4.62.3"
uritemplate = "4.1.1"
urllib3 = "1.26.7"
Werkzeug = "2.0.2"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
